# Banno-AI

./: README.md
backend/: main.py  pyproject.toml
banno-ai-webapp/: package-lock.json  package.json
banno-ai-webapp/src/: App.js  GenerateButton.js  Header.js  ImagePreview.js  ImageUploader.js  LeftPanel.js  RightPanel.js  TextInput.js  UploadButton.js
